--- a/wp-content/themes/Orbital/assets/css/style.css
+++ b/wp-content/themes/Orbital/assets/css/style.css
@@ -10836,3 +10836,109 @@ html {
 body {
 	margin-bottom: 70px;
 }
+
+/* TEMA ORBITAL */
+
+.bg-pecas {
+    margin: 15px;
+    padding: 10px;
+    min-height: 238px;
+    border-radius: 30px;
+    box-shadow: 1px 1px 10px 1px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+}
+
+.abs {
+    font-size: 22px;
+    width: 100%;
+    text-align: center;
+    border-top: 2px solid blue;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: white;
+    min-height: 50px;
+    padding-top: 6px;
+    background-color: rgba(0, 0, 0, 0.4);
+    height: fit-content;
+}
+
+.link-custom {
+    color: white;
+    text-decoration: none;
+    transition: 1s all;
+    font-weight: 800;
+}
+
+.link-custom:hover {
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+.bg-destaques {
+    min-height: 330px;
+    border-radius: 30px;
+    box-shadow: 1px 1px 25px 5px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    position: relative;
+    overflow: hidden;
+}
+
+.abs-destaques {
+    font-size: 22px;
+    width: 100%;
+    padding: 20px;
+    text-align: left;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: white;
+    min-height: 50px;
+    padding-top: 6px;
+    height: fit-content;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.bg-novidade {
+    min-height: 200px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 15px 2px black;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    position: relative;
+    overflow: hidden;
+}
+
+.bg-saibamais {
+    height: 100%;
+    color: white;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.bg-black-site {
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+}
+
+.bg-representante {
+    height: 100%;
+    color: white;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
