--- a/wp-content/themes/Orbital/style.css
+++ b/wp-content/themes/Orbital/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Odin
+Theme Name: Orbital
 Theme URI: https://github.com/wpbrasil/odin
-Description: Base theme for development with WordPress.
+Description: Tema Wordpress para Orbital feito pela MDD
 Author: Grupo WordPress Brasil
 Author URI: http://www.facebook.com/groups/wordpress.brasil/
-Version: 2.3.0
+Version: 1.0.0
 Tags: light, gray, white, one-column, two-columns, right-sidebar, flexible-width, custom-background, custom-header, custom-menu, editor-style, featured-images, flexible-header, full-width-template, post-formats, sticky-post, theme-options, translation-ready
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
